data prep and upload complete

--- a/SageMaker Project.ipynb
+++ b/SageMaker Project.ipynb
@@ -42,9 +42,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting sagemaker==1.72.0\n",
+      "  Downloading sagemaker-1.72.0.tar.gz (297 kB)\n",
+      "\u001b[K     |████████████████████████████████| 297 kB 12.5 MB/s eta 0:00:01\n",
+      "\u001b[?25hRequirement already satisfied: boto3>=1.14.12 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from sagemaker==1.72.0) (1.16.19)\n",
+      "Requirement already satisfied: numpy>=1.9.0 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from sagemaker==1.72.0) (1.18.1)\n",
+      "Requirement already satisfied: protobuf>=3.1 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from sagemaker==1.72.0) (3.11.4)\n",
+      "Requirement already satisfied: scipy>=0.19.0 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from sagemaker==1.72.0) (1.4.1)\n",
+      "Requirement already satisfied: protobuf3-to-dict>=0.1.5 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from sagemaker==1.72.0) (0.1.5)\n",
+      "Collecting smdebug-rulesconfig==0.1.4\n",
+      "  Downloading smdebug_rulesconfig-0.1.4-py2.py3-none-any.whl (10 kB)\n",
+      "Requirement already satisfied: importlib-metadata>=1.4.0 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from sagemaker==1.72.0) (2.0.0)\n",
+      "Requirement already satisfied: packaging>=20.0 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from sagemaker==1.72.0) (20.1)\n",
+      "Requirement already satisfied: botocore<1.20.0,>=1.19.19 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from boto3>=1.14.12->sagemaker==1.72.0) (1.19.19)\n",
+      "Requirement already satisfied: jmespath<1.0.0,>=0.7.1 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from boto3>=1.14.12->sagemaker==1.72.0) (0.10.0)\n",
+      "Requirement already satisfied: s3transfer<0.4.0,>=0.3.0 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from boto3>=1.14.12->sagemaker==1.72.0) (0.3.3)\n",
+      "Requirement already satisfied: six>=1.9 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from protobuf>=3.1->sagemaker==1.72.0) (1.14.0)\n",
+      "Requirement already satisfied: setuptools in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from protobuf>=3.1->sagemaker==1.72.0) (45.2.0.post20200210)\n",
+      "Requirement already satisfied: zipp>=0.5 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from importlib-metadata>=1.4.0->sagemaker==1.72.0) (2.2.0)\n",
+      "Requirement already satisfied: pyparsing>=2.0.2 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from packaging>=20.0->sagemaker==1.72.0) (2.4.6)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.25.4 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from botocore<1.20.0,>=1.19.19->boto3>=1.14.12->sagemaker==1.72.0) (1.25.10)\n",
+      "Requirement already satisfied: python-dateutil<3.0.0,>=2.1 in /home/ec2-user/anaconda3/envs/pytorch_p36/lib/python3.6/site-packages (from botocore<1.20.0,>=1.19.19->boto3>=1.14.12->sagemaker==1.72.0) (2.8.1)\n",
+      "Building wheels for collected packages: sagemaker\n",
+      "  Building wheel for sagemaker (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25h  Created wheel for sagemaker: filename=sagemaker-1.72.0-py2.py3-none-any.whl size=386358 sha256=bad968b8166ab420a51322eb2d3dfd8e8ccda7df8e6a68a0b3415c5c22e0c44c\n",
+      "  Stored in directory: /home/ec2-user/.cache/pip/wheels/c3/58/70/85faf4437568bfaa4c419937569ba1fe54d44c5db42406bbd7\n",
+      "Successfully built sagemaker\n",
+      "Installing collected packages: smdebug-rulesconfig, sagemaker\n",
+      "  Attempting uninstall: smdebug-rulesconfig\n",
+      "    Found existing installation: smdebug-rulesconfig 0.1.6\n",
+      "    Uninstalling smdebug-rulesconfig-0.1.6:\n",
+      "      Successfully uninstalled smdebug-rulesconfig-0.1.6\n",
+      "  Attempting uninstall: sagemaker\n",
+      "    Found existing installation: sagemaker 2.16.4.dev0\n",
+      "    Uninstalling sagemaker-2.16.4.dev0:\n",
+      "      Successfully uninstalled sagemaker-2.16.4.dev0\n",
+      "Successfully installed sagemaker-1.72.0 smdebug-rulesconfig-0.1.4\n",
+      "\u001b[33mWARNING: You are using pip version 20.0.2; however, version 20.3.1 is available.\n",
+      "You should consider upgrading via the '/home/ec2-user/anaconda3/envs/pytorch_p36/bin/python -m pip install --upgrade pip' command.\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "# Make sure that we use SageMaker 1.x\n",
     "!pip install sagemaker==1.72.0"
@@ -63,9 +108,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--2020-12-11 16:55:54--  http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
+      "Resolving ai.stanford.edu (ai.stanford.edu)... 171.64.68.10\n",
+      "Connecting to ai.stanford.edu (ai.stanford.edu)|171.64.68.10|:80... connected.\n",
+      "HTTP request sent, awaiting response... 200 OK\n",
+      "Length: 84125825 (80M) [application/x-gzip]\n",
+      "Saving to: ‘../data/aclImdb_v1.tar.gz’\n",
+      "\n",
+      "../data/aclImdb_v1. 100%[===================>]  80.23M  23.6MB/s    in 4.5s    \n",
+      "\n",
+      "2020-12-11 16:55:58 (17.7 MB/s) - ‘../data/aclImdb_v1.tar.gz’ saved [84125825/84125825]\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "%mkdir ../data\n",
     "!wget -O ../data/aclImdb_v1.tar.gz http://ai.stanford.edu/~amaas/data/sentiment/aclImdb_v1.tar.gz\n",
@@ -83,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,9 +182,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMDB reviews: train = 12500 pos / 12500 neg, test = 12500 pos / 12500 neg\n"
+     ]
+    }
+   ],
    "source": [
     "data, labels = read_imdb_data()\n",
     "print(\"IMDB reviews: train = {} pos / {} neg, test = {} pos / {} neg\".format(\n",
@@ -138,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,9 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMDb reviews (combined): train = 25000, test = 25000\n"
+     ]
+    }
+   ],
    "source": [
     "train_X, test_X, train_y, test_y = prepare_imdb_data(data, labels)\n",
     "print(\"IMDb reviews (combined): train = {}, test = {}\".format(len(train_X), len(test_X)))"
@@ -180,9 +259,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Let's see...I'm trying to practice finding the positive in everything, so what kind thing can I say about the Pallbearer?<br /><br />I know! The performances were -- no, that won't work as they succeeded in draining all personality from Gwyneth Paltrow, usually so vibrant, and ended up creating caricatures out of Carol Kane and Barbara Hershey...<br /><br />Oh - how 'bout the story -- nope. That isn't gonna fly either, as it was doze-inducing. What was the genre anyway? It wasn't funny, that rules out comedy. It wasn't interesting enough to be dramatic. Was that a romance between Schwimmer and Paltrow? I have to ask, as I can't be sure - let's just call it \"losers in like.\" I'm sure those behind this film started with a vision, I mean, they must have had one to pitch to the studio suits, but I need help finding it.<br /><br />Even if I were a patient person who could forgive the pure stupidity of the story, I couldn't in good conscience recommend a film that allows a guy to go into a professional job interview in a windbreaker and messy, fluffy, stupid hair. Speaking of hair -- are we supposed to be amused by the deliberate black roots and platinum locks worn by Hershey?<br /><br />What am I doing? I already lost 97 irretrievable minutes in the actual watching of the movie -- I cannot devote any more time to this loser.\n",
+      "0\n"
+     ]
+    }
+   ],
    "source": [
     "print(train_X[100])\n",
     "print(train_y[100])"
@@ -197,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,11 +318,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['let',\n",
+       " 'see',\n",
+       " 'tri',\n",
+       " 'practic',\n",
+       " 'find',\n",
+       " 'posit',\n",
+       " 'everyth',\n",
+       " 'kind',\n",
+       " 'thing',\n",
+       " 'say',\n",
+       " 'pallbear',\n",
+       " 'know',\n",
+       " 'perform',\n",
+       " 'work',\n",
+       " 'succeed',\n",
+       " 'drain',\n",
+       " 'person',\n",
+       " 'gwyneth',\n",
+       " 'paltrow',\n",
+       " 'usual',\n",
+       " 'vibrant',\n",
+       " 'end',\n",
+       " 'creat',\n",
+       " 'caricatur',\n",
+       " 'carol',\n",
+       " 'kane',\n",
+       " 'barbara',\n",
+       " 'hershey',\n",
+       " 'oh',\n",
+       " 'bout',\n",
+       " 'stori',\n",
+       " 'nope',\n",
+       " 'gonna',\n",
+       " 'fli',\n",
+       " 'either',\n",
+       " 'doze',\n",
+       " 'induc',\n",
+       " 'genr',\n",
+       " 'anyway',\n",
+       " 'funni',\n",
+       " 'rule',\n",
+       " 'comedi',\n",
+       " 'interest',\n",
+       " 'enough',\n",
+       " 'dramat',\n",
+       " 'romanc',\n",
+       " 'schwimmer',\n",
+       " 'paltrow',\n",
+       " 'ask',\n",
+       " 'sure',\n",
+       " 'let',\n",
+       " 'call',\n",
+       " 'loser',\n",
+       " 'like',\n",
+       " 'sure',\n",
+       " 'behind',\n",
+       " 'film',\n",
+       " 'start',\n",
+       " 'vision',\n",
+       " 'mean',\n",
+       " 'must',\n",
+       " 'one',\n",
+       " 'pitch',\n",
+       " 'studio',\n",
+       " 'suit',\n",
+       " 'need',\n",
+       " 'help',\n",
+       " 'find',\n",
+       " 'even',\n",
+       " 'patient',\n",
+       " 'person',\n",
+       " 'could',\n",
+       " 'forgiv',\n",
+       " 'pure',\n",
+       " 'stupid',\n",
+       " 'stori',\n",
+       " 'good',\n",
+       " 'conscienc',\n",
+       " 'recommend',\n",
+       " 'film',\n",
+       " 'allow',\n",
+       " 'guy',\n",
+       " 'go',\n",
+       " 'profession',\n",
+       " 'job',\n",
+       " 'interview',\n",
+       " 'windbreak',\n",
+       " 'messi',\n",
+       " 'fluffi',\n",
+       " 'stupid',\n",
+       " 'hair',\n",
+       " 'speak',\n",
+       " 'hair',\n",
+       " 'suppos',\n",
+       " 'amus',\n",
+       " 'deliber',\n",
+       " 'black',\n",
+       " 'root',\n",
+       " 'platinum',\n",
+       " 'lock',\n",
+       " 'worn',\n",
+       " 'hershey',\n",
+       " 'alreadi',\n",
+       " 'lost',\n",
+       " '97',\n",
+       " 'irretriev',\n",
+       " 'minut',\n",
+       " 'actual',\n",
+       " 'watch',\n",
+       " 'movi',\n",
+       " 'cannot',\n",
+       " 'devot',\n",
+       " 'time',\n",
+       " 'loser']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# TODO: Apply review_to_words to a review (train_X[100] or any other review)\n"
+    "# TODO: Apply review_to_words to a review (train_X[100] or any other review)\n",
+    "review_to_words(train_X[100])"
    ]
   },
   {
@@ -260,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -308,9 +521,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Read preprocessed data from cache file: preprocessed_data.pkl\n"
+     ]
+    }
+   ],
    "source": [
     "# Preprocess data\n",
     "train_X, test_X, train_y, test_y = preprocess_data(train_X, test_X, train_y, test_y)"
@@ -340,11 +561,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "from collections import Counter\n",
     "\n",
     "def build_dict(data, vocab_size = 5000):\n",
     "    \"\"\"Construct and return a dictionary mapping each of the most frequently appearing words to a unique integer.\"\"\"\n",
@@ -352,12 +574,16 @@
     "    # TODO: Determine how often each word appears in `data`. Note that `data` is a list of sentences and that a\n",
     "    #       sentence is a list of words.\n",
     "    \n",
-    "    word_count = {} # A dict storing the words that appear in the reviews along with how often they occur\n",
+    "    #word_count = {} # A dict storing the words that appear in the reviews along with how often they occur\n",
+    "    word_count = Counter(x for sublist in data for x in sublist)\n",
     "    \n",
     "    # TODO: Sort the words found in `data` so that sorted_words[0] is the most frequently appearing word and\n",
     "    #       sorted_words[-1] is the least frequently appearing word.\n",
     "    \n",
-    "    sorted_words = None\n",
+    "    sorted_words = sorted(word_count, key=word_count.get, reverse=True)\n",
+    "    \n",
+    "    for i in range(5):\n",
+    "        print(sorted_words[i])\n",
     "    \n",
     "    word_dict = {} # This is what we are building, a dictionary that translates words into integers\n",
     "    for idx, word in enumerate(sorted_words[:vocab_size - 2]): # The -2 is so that we save room for the 'no word'\n",
@@ -368,9 +594,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "movi\n",
+      "film\n",
+      "one\n",
+      "like\n",
+      "time\n"
+     ]
+    }
+   ],
    "source": [
     "word_dict = build_dict(train_X)"
    ]
@@ -386,16 +624,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** The five most frequently appearing tokenized words are: movi, film, one, like, time.  This makes perfect sense to me.  When I see movi as the most common and film as the second most common I am confident that in a set of movie reviews that these are common words."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "movi\n",
+      "film\n",
+      "one\n",
+      "like\n",
+      "time\n"
+     ]
+    }
+   ],
    "source": [
-    "# TODO: Use this space to determine the five most frequently appearing words in the training set."
+    "# TODO: Use this space to determine the five most frequently appearing words in the training set.\n",
+    "i = range(2,7,1)\n",
+    "for n in i:\n",
+    "    print(list(word_dict.keys())[list(word_dict.values()).index(n)]) "
    ]
   },
   {
@@ -409,7 +662,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -420,7 +673,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -439,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -471,7 +724,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -524,7 +777,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -546,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -562,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1277,7 +1530,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.10"
   }
  },
  "nbformat": 4,
